--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ if (GUROBI_INCLUDE_DIR)
     set (GUROBI_FOUND TRUE)
     set (GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}")
     set (GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}")
+    set (GUROBI_CXX_LIBRARY "${GUROBI_CXX_LIBRARY}")
 
 else (GUROBI_INCLUDE_DIRS)
     find_path (GUROBI_INCLUDE_DIR
@@ -90,15 +91,13 @@ else (GUROBI_INCLUDE_DIRS)
         )
 
     find_library (GUROBI_CXX_LIBRARY
-        NAMES gurobi_c++ gurobi_c
+        NAMES "gurobi_c" "gurobi_g++4.1" "gurobi_g++4.2"
         PATHS "$ENV{GUROBI_HOME}/lib"
         )
 
     set(GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}")
-    set(GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}")
-
-    include_directories (${GUROBI_INCLUDE_DIR})
-    include_directories (${GUROBI_LIBRARIES})
+    set(GUROBI_LIBRARIES "${GUROBI_LIBRARY}; ${GUROBI_CXX_LIBRARY}")
+    set(GUROBI_CXX_LIBRARY "${GUROBI_CXX_LIBRARY}")
 
     # testing if the variables were found
     include(FindPackageHandleStandardArgs)
