--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ set (EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/build")
 set (LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
 
 #GLOBAL SETTING OF HOW TO READ THE NETWORK
-set (REAL OFF)
+set (REAL ON)
 IF (REAL)
 	message ("\nINFO: REAL=${REAL} means Reader uses real values of instance")
 ELSE()
