Observer and Factory are receive steiner type representation as template parameter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,7 @@ include_directories (include lib)
 add_subdirectory (network)
 add_subdirectory (sttree)
 add_subdirectory (statistics)
-add_subdirectory (mpp_algorithms)
+#add_subdirectory (mpp_algorithms)
 add_subdirectory (util)
 add_subdirectory (stalgorithm)
 add_subdirectory (mmmstp)
