--- a/multi/CMakeLists.txt
+++ b/multi/CMakeLists.txt
@@ -23,10 +23,21 @@ ENDIF()
 include_directories (${GUROBI_INCLUDE_DIRS})
 FILE(GLOB GRB "${GUROBI_INCLUDE_DIRS}/*.h")
 
-add_executable (multi_test multi.cpp models.h models.cpp 				
+add_executable (paretogen pareto.cpp models.h models.cpp 				
 				${INCLUDE} 
 				${GRB})
-target_link_libraries (multi_test graph
+target_link_libraries (paretogen graph
 						-lboost_regex						
 						${GUROBI_CXX_LIBRARY} 
 						${GUROBI_LIBRARIES})
+
+
+add_executable (mathmodel mathmodel.cpp models.h models.cpp
+				${INCLUDE}
+				${GRB})
+
+target_link_libraries (mathmodel graph
+						-lboost_regex						
+						${GUROBI_CXX_LIBRARY} 
+						${GUROBI_LIBRARIES})
+
