--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,13 @@ else (GUROBI_INCLUDE_DIRS)
 endif (GUROBI_INCLUDE_DIR)
 #------------------------ ENDOFGUROBI ------------------------- #
 
+#--------------------------- find omp
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+#------------------------- end find omp
 
 
 # ----------------------- FIND DOXYGEM ------------------------ # 
@@ -142,7 +149,7 @@ set (EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/build")
 set (LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
 
 #GLOBAL SETTING OF HOW TO READ THE NETWORK
-set (REAL ON)
+set (REAL OFF)
 IF (REAL)
 	message ("\nINFO: REAL=${REAL} means Reader uses real values of instance")
 ELSE()
