minamax base algorithm has been implemented

--- a/mmmstp/CMakeLists.txt
+++ b/mmmstp/CMakeLists.txt
@@ -50,5 +50,8 @@ target_link_libraries (agmheuristic graph sttalgo sttree myutil)
 add_executable (tabu_test tabusearch.h tabusearch.cpp ${includes})
 target_link_libraries (tabu_test graph sttree sttalgo myutil)
 
+add_executable (minmax minmax.cpp minmax.h ${includes})
+target_link_libraries (minmax graph sttree sttalgo myutil)
+
 #add_executable (limite_agm limite.cpp limite.h ${includes})
 #target_link_libraries (limite_agm graph sttalgo sttree)
