--- a/include/config.h.in
+++ b/include/config.h.in
@@ -6,19 +6,22 @@
 #include <cstdlib>
 
 #define VERSION_MAJOR @VERSION_MAJOR@
-#define VERSION_MAJOR @VERSION_MINOR@
+#define VERSION_MINOR @VERSION_MINOR@
 #define VERSION_PATCH @VERSION_PATCH@
 
-void message (int argc, char const *argv[]) 
+bool message (int argc, char const *argv[], std::string command) 
 {
 	if (argc < 2) {
 		fprintf(stdout,"%s Version %d.%d.%d\n",
 			argv[0],
 			VERSION_MAJOR,
-			VERSION_MAJOR,
+			VERSION_MINOR,
 			VERSION_PATCH);
-		fprintf(stdout,"Usage: %s number\n",argv[0]);
+		fprintf(stdout,"Usage: %s %s\n",argv[0], command.c_str ());
+		return true;
 	}
+
+	return false;
 }
 
 #endif // CONFIG_H
