--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ enable_testing ()
 
 project (Doutorado)
 
+SET (CMAKE_CXX_COMPILER /usr/local/bin/g++-7)
+
 if( CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]" )
     message( "INFO: DEBUG BUILD" )
     # for debug type builds, turn on verbose makefiles
@@ -46,14 +48,14 @@ if( CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]" )
 
     # Tell C/C++ that we're doing a debug build
     ADD_DEFINITIONS( -DDEBUG ) 
-    add_definitions ("-std=c++0x -Wall")
+    add_definitions ("-std=c++11 -Wall")
     message("${CMAKE_CXX_FLAGS_DEBUG}")
     
 endif()
 
 if( CMAKE_BUILD_TYPE MATCHES "[Rr][Ee][Ll][Ee][Aa][Ss][Ee]" )
     message( "INFO: RELEASE BUILD" )    
-    add_definitions ("-std=c++0x -Wall")    
+    add_definitions ("-std=c++11 -Wall")    
     message("${CMAKE_CXX_FLAGS_RELEASE}")
 endif()
 
@@ -61,7 +63,7 @@ if (CMAKE_BUILD_TYPE MATCHES "[Pp][Rr][Oo][Ff][Ii][Ll][Ee]")
     message ("INFO: PROFILE BUILD")
     
     set (CMAKE_CXX_FLAGS_PROFILE "-O0 -pg")    
-    add_definitions ("-std=c++0x")
+    add_definitions ("-std=c++11")
     
     message("${CMAKE_CXX_FLAGS_PROFILE}")
     
@@ -90,32 +92,41 @@ if (GUROBI_INCLUDE_DIR)
     set (GUROBI_FOUND TRUE)
     set (GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}")
     set (GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}")
-    set (GUROBI_CXX_LIBRARY "${GUROBI_CXX_LIBRARY}")
+    #set (GUROBI_CXX_LIBRARY "${GUROBI_CXX_LIBRARY}")
 
 else (GUROBI_INCLUDE_DIRS)
     find_path (GUROBI_INCLUDE_DIR
         NAMES "gurobi_c++.h" "gurobi_c.h"
-        PATHS "$ENV{GUROBI_HOME}/include"
+        PATHS 
+            "$ENV{GUROBI_HOME}/include"
+            "/Library/gurobi702/mac64/include"
         )
 
     find_library (GUROBI_LIBRARY
-        NAMES gurobi gurobi60
-        PATHS "$ENV{GUROBI_HOME}/lib"
-        )
+        NAMES 
+            "gurobi" 
+            "gurobi70"
+        PATHS   
+            "$ENV{GUROBI_HOME}/lib"
+            "/Library/gurobi702/mac64/lib"
+       )
 
     find_library (GUROBI_CXX_LIBRARY
         NAMES "gurobi_c" "gurobi_g++4.1" "gurobi_g++4.2"
-        PATHS "$ENV{GUROBI_HOME}/lib"
+        PATHS   "$ENV{GUROBI_HOME}/lib"
+                "/Library/gurobi702/mac64/lib"
         )
 
     set(GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}")
     set(GUROBI_LIBRARIES "${GUROBI_LIBRARY}; ${GUROBI_CXX_LIBRARY}")
-    set(GUROBI_CXX_LIBRARY "${GUROBI_CXX_LIBRARY}")
+    #set(GUROBI_CXX_LIBRARY "${GUROBI_CXX_LIBRARY}")
 
     # testing if the variables were found
     include(FindPackageHandleStandardArgs)
     find_package_handle_standard_args(GUROBI  DEFAULT_MSG
         GUROBI_LIBRARY GUROBI_CXX_LIBRARY GUROBI_INCLUDE_DIR)
+
+    mark_as_advanced(GUROBI_INCLUDE_DIR GUROBI_LIBRARY GUROBI_CXX_LIBRARY)
 
 endif (GUROBI_INCLUDE_DIR)
 #------------------------ ENDOFGUROBI ------------------------- #
@@ -176,10 +187,10 @@ add_subdirectory (util)
 add_subdirectory (stalgorithm)
 add_subdirectory (mmmstp) #multiple tree under budget constraints
 add_subdirectory (mmstp-hop) #multiple tree under hop constraints
-add_subdirectory (multi)
+#add_subdirectory (multi)
 
 #directory for test of libraries and some mpp_algorithms
-add_subdirectory (testes)
+#add_subdirectory (testes)
 
 INSTALL (FILES CMakeLists.txt DESTINATION .)
 INSTALL (DIRECTORY include lib DESTINATION .)
