--- a/multi/CMakeLists.txt
+++ b/multi/CMakeLists.txt
@@ -24,41 +24,55 @@ ELSE()
 	MESSAGE ("\nCompiling MATHMODEL using UNIT Values\n")
 ENDIF()
 
-
 include_directories (${GUROBI_INCLUDE_DIRS})
 FILE(GLOB GRB "${GUROBI_INCLUDE_DIRS}/*.h")
 
-add_executable (paretogen pareto.cpp models.h models.cpp 				
-				${INCLUDE} 
-				${GRB})
-target_link_libraries (paretogen graph sttree
-						-lboost_regex						
-						${GUROBI_CXX_LIBRARY} 
-						${GUROBI_LIBRARIES})
+MESSAGE ("-------------------- ${Boost_LIBRARIES}")
+
+#add_executable (paretogen pareto.cpp models.h models.cpp
+#				${Boost_INCLUDE_DIR}
+#				${INCLUDE} 
+#				${GRB})
+#target_link_libraries (paretogen graph sttree
+#						${Boost_LIBRARIES}						
+#						${GUROBI_CXX_LIBRARY} 
+#						${GUROBI_LIBRARIES})
+
+#add_executable (mathmodel mathmodel.cpp models.h models.cpp
+#				${Boost_INCLUDE_DIR}
+#				${INCLUDE}
+#				${GRB})
+#target_link_libraries (mathmodel graph
+#						${Boost_LIBRARIES}
+#						${GUROBI_CXX_LIBRARY} 
+#						${GUROBI_LIBRARIES})
+
+#add_executable (steinermodel steinermodel.cpp models.h models.cpp
+#				${Boost_INCLUDE_DIR}
+#				${INCLUDE}
+#				${GRB})
+#target_link_libraries (steinermodel graph
+#						${Boost_LIBRARIES}
+#						${GUROBI_CXX_LIBRARY} 
+#						${GUROBI_LIBRARIES})
 
 
-add_executable (mathmodel mathmodel.cpp models.h models.cpp
-				${INCLUDE}
-				${GRB})
+add_executable (multitest main.cpp individual.h ${INCLUDE})
+target_link_libraries (multitest graph sttree sttalgo)
 
-target_link_libraries (mathmodel graph
-						-lboost_regex						
-						${GUROBI_CXX_LIBRARY} 
-						${GUROBI_LIBRARIES})
+add_executable (mainmulti mainmulti.cpp 
+				individual.h 
+				operator.h				
+				generic_individual.h	
+				problem_info.h
+				spea2.h
+				${INCLUDE})
+target_link_libraries (mainmulti graph sttree sttalgo)
 
-add_executable (steinermodel steinermodel.cpp models.h models.cpp
-				${INCLUDE}
-				${GRB})
-
-target_link_libraries (steinermodel graph
-						-lboost_regex
-						${GUROBI_CXX_LIBRARY} 
-						${GUROBI_LIBRARIES})
 
 # compilation of parallel example of algorithms
-add_executable (parallel parallel.cpp
-				${INCLUDE})
-target_link_libraries (parallel graph sttree sttalgo myutil -fopenmp)
+# add_executable (parallel parallel.cpp ${INCLUDE})
+#target_link_libraries (parallel graph sttree sttalgo myutil -fopenmp)
 
 
 INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION multi)
