--- a/multi/CMakeLists.txt
+++ b/multi/CMakeLists.txt
@@ -27,19 +27,10 @@ ENDIF()
 include_directories (${GUROBI_INCLUDE_DIRS})
 FILE(GLOB GRB "${GUROBI_INCLUDE_DIRS}/*.h")
 
-#add_executable (paretogen pareto.cpp models.h models.cpp
-#				${Boost_INCLUDE_DIR}
-#				${INCLUDE} 
-#				${GRB})
-#target_link_libraries (paretogen graph sttree
-#						${Boost_LIBRARIES}						
-#						${GUROBI_CXX_LIBRARY} 
-#						${GUROBI_LIBRARIES})
+add_executable (paretogen pareto.cpp models.h models.cpp ${Boost_INCLUDE_DIR} ${INCLUDE} ${GRB})
+target_link_libraries (paretogen graph sttree ${Boost_LIBRARIES} ${GUROBI_CXX_LIBRARY} ${GUROBI_LIBRARIES})
 
-add_executable (mathmodel mathmodel.cpp models.h models.cpp
-				${INCLUDE}
-				${GRB})
-				
+add_executable (mathmodel mathmodel.cpp models.h models.cpp ${INCLUDE} ${GRB})
 target_link_libraries (mathmodel graph ${GUROBI_LIBRARIES})
 
 #add_executable (steinermodel steinermodel.cpp models.h models.cpp
